[package]
name = "oxideav-basic"
version = "0.0.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-basic"
authors = ["Mark Karpeles"]
description = "Simple standard codecs and containers for oxideav (PCM, WAV, ...)"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-basic"
keywords = ["multimedia", "audio", "wav", "pcm", "pure-rust"]
categories = ["multimedia::encoding"]

[dependencies]
oxideav-core = "0.1"
